--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 # MongoDB Atlas Configuration
 # Replace with your actual MongoDB Atlas connection string
-MONGODB_URI=mongodb+srv://sultan:sultan@cluster0.k0o8m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+# MONGODB_URI=mongodb+srv://sultan:sultan@cluster0.k0o8m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
 # Flask Configuration
+
+ MONGODB_URI=mongodb+srv://carprice2026:Wh2rcgio8yfzLDq2@cluster0.wkponhu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 FLASK_SECRET_KEY=cmrcmecmrmcrcmrcmrcmrcmrcmrcmrc
 
 # Optional: Flask Environment
@@ -12,6 +14,9 @@ FLASK_ENV=development
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=ccabdirasaaq800@gmail.com
-MAIL_PASSWORD=piob rtki isis tngg
+MAIL_USERNAME=carprice2026@gmail.com
+MAIL_PASSWORD=wkqb ijzt bjte hylx
 MAIL_DEFAULT_SENDER=CPS@gmail.com
+
+SCALER_PATH=scaler (1).pkl
+FEATURES_PATH=selected_features (1).pkl
